# robots

./: .gitignore  CHANGELOG.md  NOTICE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: codeql-advanced.yml  test-lint.yml
docs/: architecture.md  device-connect.md  index.md  mesh.md  security.md  troubleshooting.md
docs/assets/cosmos3/: live_modes_metrics.json  real_e2e_metrics.json
docs/getting-started/: installation.md
docs/policies/: cosmos3.md  curobo.md  custom-policies.md  groot.md  lerobot-local.md  moveit2.md  overview.md  wbc.md
docs/robots/: index.md
examples/: README.md  cosmos3_diffusers_mujoco_rollout.py  cosmos3_sim_rollout.py  molmoact2_sim_pickplace.py  molmoact2_so101_pickplace.py  wbc_g1_torque_deploy.py
strands_robots/: __init__.py  doctor.py  hardware_robot.py  robot.py
strands_robots/benchmarks/: __init__.py
strands_robots/benchmarks/libero/: __init__.py  adapter.py  bddl_parser.py  suite.py
strands_robots/mesh/: __init__.py  _acl_config.py  audit.py  core.py  input.py  security.py  sensors.py  session.py
strands_robots/mesh/iot/: __init__.py  bootstrap.py  camera_offload.py  provision.py  shadow.py
strands_robots/mesh/transport/: __init__.py  base.py  bridge_transport.py  factory.py  iot_transport.py  zenoh_transport.py
strands_robots/policies/: __init__.py  _rng.py  base.py  mock.py
strands_robots/policies/cosmos3/: __init__.py  action_decode.py  embodiments.py  policy.py  policy_diffusers.py  sim_ik.py
strands_robots/policies/cosmos3/stats/: bridge_orig_lerobot_stats.json  droid_lerobot_stats.json
strands_robots/policies/curobo/: __init__.py  policy.py
strands_robots/policies/groot/: data_config.py  data_configs.json  policy.py
strands_robots/policies/lerobot_local/: molmoact2.py  policy.py  resolution.py
strands_robots/policies/moveit2/: __init__.py  client.py  policy.py
strands_robots/policies/moveit2/server/: README.md  __init__.py  docker-compose.yml  zmq_node.py
strands_robots/policies/wbc/: __init__.py  config.py  control.py  observation.py  policy.py
strands_robots/registry/: policies.json  robots.json
strands_robots/simulation/: __init__.py  base.py  benchmark.py  benchmark_spec.py  factory.py  models.py  policy_runner.py  predicates.py
strands_robots/simulation/libero_offscreen_render/: __init__.py  engine.py
strands_robots/simulation/mujoco/: physics.py  rendering.py  simulation.py  spec_builder.py  tool_spec.json
strands_robots/simulation/newton/: simulation.py
strands_robots/tools/: __init__.py  gr00t_inference.py  robot_mesh.py  serial_tool.py  use_lerobot.py
tests/: conftest.py  test_asset_download.py  test_asset_manager.py  test_async_utils.py  test_customer_workflow_regressions.py  test_dataset_recorder.py  test_docs_brand_visuals.py  test_docs_home_navigation.py  test_docs_policy_nav_coverage.py  test_doctor.py  test_examples_no_lerobot_imports.py  test_main_cli.py  test_robot_factory.py  test_streaming_dataset.py
tests/benchmarks/libero/: test_bddl_parser.py  test_libero_adapter.py  test_libero_e2e.py  test_libero_eef_gripper_state_read.py  test_libero_osc_controller_action_dispatch.py  test_libero_suite.py
tests/mesh/: test_acl_config.py  test_audit_seq_psk_verified_seed.py  test_bridge_dedup.py  test_bridge_transport.py  test_camera_schema.py  test_deep_mesh.py  test_estop_freshness_window.py  test_input_publisher_chokepoint.py  test_input_validation.py  test_iot_bootstrap.py  test_iot_camera_offload.py  test_iot_provision.py  test_iot_shadow.py  test_iot_transport_wire_edges.py  test_mesh.py  test_mesh_audit.py  test_mesh_robustness.py  test_mesh_rpc.py  test_mesh_rpc_sim_dispatch.py  test_mesh_session.py  test_mesh_tell_sim_e2e.py  test_mesh_wiring.py  test_pr224_review_blockers.py  test_pr6_review_pins.py  test_robot_mesh_tool.py  test_safety_audit_poison_records.py  test_sensor_readers.py  test_server_address_port_ipv6.py  test_session_acl_scoping.py  test_session_backend_select.py  test_sim_robot_mesh_attach.py  test_transport.py  test_transport_factory.py  test_validate_command_sim_fields.py
tests/mocks/: torch_mock.py
tests/policies/: test_base.py  test_rng_parity.py
tests/policies/cosmos3/: test_action_decode.py  test_policy_diffusers.py  test_sim_ik.py  test_sim_ik_decode_orchestration.py  test_sim_ik_solver_selection.py
tests/policies/curobo/: test_policy.py
tests/policies/groot/: test_data_config.py  test_policy.py  test_zmq_wire_roundtrip.py
tests/policies/lerobot_local/: test_molmoact2.py  test_policy.py  test_resolution.py
tests/policies/moveit2/: test_policy.py
tests/policies/wbc/: test_policy.py  test_torque_harness.py
tests/registry/: test_resolve_policy_url_schemes.py
tests/simulation/: test_benchmark.py  test_benchmark_dsl.py  test_benchmark_predicates.py  test_factory.py  test_no_import_cycle.py  test_policy_kwargs_forwarding.py  test_policy_runner.py  test_policy_runner_benchmark.py
tests/simulation/libero_offscreen_render/: test_engine_get_body_state.py  test_engine_get_contacts.py  test_engine_image_rotation.py
tests/simulation/mujoco/: test_action_key_resolution.py  test_ax1_robot_name_optional.py  test_benchmark_dispatch.py  test_load_scene_interaction.py  test_physics.py  test_recording_synchronous.py  test_rendering.py  test_scene_ops_guardrails.py  test_spec_builder.py  test_tendon_actuator.py
tests/simulation/newton/: test_camera_lookat_quat.py
tests/tools/: test_download_assets.py  test_gr00t_inference.py  test_lerobot_teleoperate.py  test_pose_tool.py  test_serial_tool.py  test_tools_lazy_import.py  test_use_lerobot.py
tests_integ/: test_iot_transport.py
tests_integ/benchmarks/libero/: test_upstream_state_parity.py
tests_integ/mesh/: __init__.py  test_dedup_gc_perf_bounded.py  test_mesh_e2e.py
tests_integ/policies/cosmos3/: test_diffusers_backend_live.py
tests_integ/policies/curobo/: test_curobo_live.py
tests_integ/policies/moveit2/: test_moveit2_live.py
tests_integ/policies/wbc/: test_wbc_live.py
