[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "strands-robots"
dynamic = ["version"]
description = "AI-powered robot control, simulation, and training for Strands Agents — integrates with MuJoCo, Isaac Sim, Newton, and many more"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [
    {name = "AWS", email = "opensource@amazon.com"},
]
keywords = [
    "robots", "agents", "strands", "sdk",
    "mujoco", "simulation", "lerobot", "reinforcement-learning",
    "gr00t", "isaac-sim", "vla",
    "robot-learning", "imitation-learning",
    "teleoperation", "manipulation", "strands-agents",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "strands-agents>=1.0.0,<2.0.0",
    "numpy>=1.21.0,<3.0.0",
    "opencv-python-headless>=4.5.0,<5.0.0",
    "Pillow>=8.0.0,<12.0.0",
]

[project.optional-dependencies]
groot-service = [
    "pyzmq>=27.0.0,<28.0.0",
    "msgpack>=1.0.0,<2.0.0",
]
lerobot = [
    "lerobot>=0.5.0,<0.6.0",
]
sim-mujoco = [
    "robot_descriptions>=1.11.0,<2.0.0",
    "mujoco>=3.2.0,<4.0.0",
    "imageio>=2.28.0,<3.0.0",
    "imageio-ffmpeg>=0.4.0,<1.0.0",
]
benchmark-libero = [
    "libero>=0.1.0,<1.0.0",
]
all = [
    "strands-robots[groot-service]",
    "strands-robots[lerobot]",
    "strands-robots[sim-mujoco]",
]
dev = [
    "pytest>=6.0,<9.0.0",
    "pytest-cov>=4.0.0,<6.0.0",
    "ruff>=0.4.0,<1.0.0",
    "mypy>=1.0.0,<2.0.0",
    "pytest-timeout>=2.0.0,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/strands-labs/robots"
Documentation = "https://github.com/strands-labs/robots#readme"
Repository = "https://github.com/strands-labs/robots.git"
Issues = "https://github.com/strands-labs/robots/issues"
Changelog = "https://github.com/strands-labs/robots/releases"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["strands_robots"]

[tool.hatch.envs.default]
installer = "uv"
features = ["all"]
dependencies = [
    "pytest>=6.0,<9.0.0",
    "pytest-cov>=4.0.0,<6.0.0",
    "ruff>=0.4.0,<1.0.0",
    "mypy>=1.0.0,<2.0.0",
    "Pillow>=8.0.0,<12.0.0",
    "requests>=2.28.0,<3.0.0",
    "msgpack>=1.0.0,<2.0.0",
    "pyzmq>=27.0.0,<28.0.0",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-integ = "pytest tests_integ/ -v --timeout=300 {args}"
lint = ["ruff check strands_robots tests tests_integ", "ruff format --check strands_robots tests tests_integ", "mypy strands_robots tests tests_integ"]
format = ["ruff check --fix strands_robots tests tests_integ", "ruff format strands_robots tests tests_integ"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
]
ignore = [
    "E501",  # line too long — handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["strands_robots"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = false

# Third-party libs without type stubs
[[tool.mypy.overrides]]
module = ["lerobot.*", "gr00t.*", "draccus.*", "msgpack.*", "zmq.*", "huggingface_hub.*", "serial.*", "psutil.*", "torch.*", "torchvision.*", "transformers.*", "einops.*", "robot_descriptions.*", "mujoco.*", "imageio.*", "libero.*"]
ignore_missing_imports = true

# @tool decorator injects runtime signatures mypy cannot check
[[tool.mypy.overrides]]
module = ["strands_robots.tools.*"]
disallow_untyped_defs = false
warn_return_any = false
ignore_missing_imports = true

# LeRobot local policy uses dynamic attr access via draccus PreTrainedConfig
[[tool.mypy.overrides]]
module = ["strands_robots.policies.*"]
warn_return_any = false
disallow_untyped_defs = false

# Robot core — complex dynamic assembly, optional deps
[[tool.mypy.overrides]]
module = ["strands_robots.robot"]
disallow_untyped_defs = false
warn_return_any = false

# __init__.py has lazy import helpers
[[tool.mypy.overrides]]
module = ["strands_robots.__init__"]
disallow_untyped_defs = false

# Registry modules — dynamic JSON loading returns Any
[[tool.mypy.overrides]]
module = ["strands_robots.registry.*"]
warn_return_any = false
disallow_untyped_defs = false

# MuJoCo simulation — mixins use cooperative self._world patterns
# attr-defined: Mixins access self._world/self._lock/etc. from Simulation (cooperative pattern)
# assignment: PEP 484 implicit Optional (= None on typed params)
# override: Subclass signatures extend base with extra params (orientation, mesh_path)
# misc: Multiple inheritance method resolution conflicts between mixin + ABC
[[tool.mypy.overrides]]
module = ["strands_robots.simulation.mujoco.*"]
disallow_untyped_defs = false
warn_return_any = false

# Async utils and dataset recorder — thin wrappers with dynamic types
[[tool.mypy.overrides]]
module = ["strands_robots._async_utils", "strands_robots.dataset_recorder"]
disallow_untyped_defs = false
warn_return_any = false

# Test files — relaxed type checking for mocks, fixtures, and test utilities
[[tool.mypy.overrides]]
module = ["tests.*", "tests_integ.*"]
disallow_untyped_defs = false
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=strands_robots --cov-report=term-missing --strict-markers"
markers = [
    "gpu: requires CUDA GPU and real model weights (run with: pytest -m gpu)",
]
