[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "strands-robots"
dynamic = ["version"]
description = "AI-powered robot control, simulation, and training for Strands Agents - integrates with MuJoCo, Isaac Sim, Newton, and many more"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [
    {name = "AWS", email = "opensource@amazon.com"},
]
keywords = [
    "robots", "agents", "strands", "sdk",
    "mujoco", "simulation", "lerobot", "reinforcement-learning",
    "gr00t", "isaac-sim", "vla",
    "robot-learning", "imitation-learning",
    "teleoperation", "manipulation", "strands-agents",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "strands-agents>=1.0.0,<2.0.0",
    "numpy>=1.21.0,<3.0.0",
    "opencv-python-headless>=4.5.0,<5.0.0",
    "Pillow>=8.0.0,<12.0.0",
]

[project.optional-dependencies]
groot-service = [
    "pyzmq>=27.0.0,<28.0.0",
    "msgpack>=1.0.0,<2.0.0",
]
cosmos3-service = [
    # Self-contained msgpack+NumPy WebSocket client for the Cosmos 3 RoboLab
    # policy server (cosmos_framework.scripts.action_policy_server_robolab).
    #
    # No openpi-client dependency: the wire protocol is implemented directly
    # via `websockets` + `msgpack` plus a vendored numpy packer
    # (strands_robots/policies/cosmos3/_msgpack_numpy.py). This keeps the
    # extra numpy-version agnostic so it composes cleanly with `lerobot`
    # (numpy>=2) for dataset recording in the same env.
    "msgpack>=1.0.0,<2.0.0",
    "websockets>=12.0",
]
# In-process Cosmos 3 backend (Cosmos3Policy(backend="diffusers")). Loads the
# Cosmos3OmniPipeline directly via native Hugging Face `diffusers` (no RoboLab
# policy server, no GPU isolation) - one forward pass returns the predicted
# world video + sound + action chunk. This is a HEAVY GPU stack (diffusers +
# torch + transformers); the default backend stays "service", so a plain
# `pip install strands-robots[cosmos3-service]` (msgpack + websockets only) is
# unaffected. diffusers composes with numpy>=2, so this extra is co-installable
# with cosmos3-service and lerobot.
#
# Cosmos3OmniPipeline ships only in diffusers-from-source (>0.38); the version
# floor here is a lower bound, but install the git pin alongside this extra to
# get the Cosmos3OmniPipeline + CosmosActionCondition symbols:
#   uv pip install strands-robots[cosmos3-diffusers] \
#       'diffusers @ git+https://github.com/huggingface/diffusers'
cosmos3-diffusers = [
    "diffusers>=0.30",
    "torch>=2.0",
    "transformers>=4.40",
    "accelerate>=0.26",
]
# Cosmos 3 -> MuJoCo sim-loop bridge. The diffusers backend emits the model's
# raw unified action ([-1, 1] quantile-normalized relative end-effector pose,
# not joint radians); turning that into joint targets a MuJoCo arm can track
# needs de-normalization (bundled per-domain q01/q99 stats, pure NumPy) plus an
# inverse-kinematics solve. This extra pulls `mink` (differential IK on the same
# mujoco.MjModel) + `mujoco`. Install it to drive a sim arm with
# Cosmos3Policy(backend="diffusers") via decode_cosmos_chunk_to_targets /
# MinkIKBridge. numpy>=2 compatible (co-installable with cosmos3-diffusers,
# cosmos3-service, sim-mujoco, and lerobot).
cosmos3-sim = [
    "mink>=0.0.4",
    "mujoco>=3.2.0,<4.0.0",
    # qpsolvers QP backend for mink.solve_ik. quadprog is the dependency-light
    # default that is always available; the bridge auto-selects whatever
    # qpsolvers reports (preferring daqp when present).
    "qpsolvers[quadprog]>=4.0.0",
]
# MoveIt2 sidecar client (ROS 2 / moveit_py runs out-of-process; the
# client is a lightweight ZMQ + msgpack peer so users without ROS 2
# sourced are unaffected). See policies/moveit2/server/ for the
# sidecar reference implementation.
moveit2 = [
    "pyzmq>=27.0.0,<28.0.0",
    "msgpack>=1.0.0,<2.0.0",
]
# cuRobo collision-aware motion planning. Runs in-process as a CUDA
# library (no sidecar, unlike MoveIt2). Users without a CUDA-capable GPU
# should not install this extra. See policies/curobo/ for the policy
# wrapper.
#
# IMPORTANT: cuRobo is NOT distributed on PyPI. The package named
# ``nvidia-curobo`` on PyPI is an unrelated v0.1 squatter — installing
# it does not get you a working cuRobo. The real cuRobo is published
# only as source on GitHub at https://github.com/NVlabs/curobo. Users
# must install it from source before using this policy:
#
#   git clone https://github.com/NVlabs/curobo.git
#   pip install -e ./curobo
#
# Once cuRobo's API surface stabilises and a real PyPI release exists,
# this extra will pin to it. Until then, keep the extra empty so
# ``pip install strands-robots[curobo]`` is a no-op rather than a
# silently-broken install of the squatter package. Tracked in the
# follow-up issue linked from PR #306.
curobo = []
lerobot = [
    "lerobot[feetech]>=0.5.0,<0.6.0",
    # #378: lerobot 0.5.1's pyav video fallback calls torchvision.io.VideoReader,
    # which torchvision 0.26 (resolved on linux+aarch64 via the torch 2.11 Thor
    # override below) removed -- crashing dataset video read-back. lerobot's own
    # torchcodec dependency marker EXCLUDES aarch64, so a `pip install
    # strands-robots[lerobot]` on Thor/Jetson gets no decoder. Add torchcodec
    # explicitly on linux+aarch64 so lerobot uses its preferred (working)
    # torchcodec decoder instead of the removed VideoReader. (The hatch dev env
    # carries the same pin; this makes the public extra self-sufficient too.)
    # NOTE: torchcodec ships as +cuXXX wheels resolved by UV_TORCH_BACKEND; a
    # plain `pip install` on Thor may need the matching CUDA index -- see the
    # README Installation section for the Thor/Jetson caveat.
    "torchcodec>=0.7; platform_machine == 'aarch64' and sys_platform == 'linux'",
]
sim = [
    "robot_descriptions>=1.11.0,<2.0.0",
]
sim-mujoco = [
    "strands-robots[sim]",
    "mujoco>=3.2.0,<4.0.0",
    "imageio>=2.28.0,<3.0.0",
    "imageio-ffmpeg>=0.4.0,<1.0.0",
]
benchmark-libero = [
    "libero>=0.1.0,<1.0.0",
]
mesh = [
    "eclipse-zenoh>=1.0.0,<2.0.0",
    "json5>=0.9.0,<1.0.0",
]
# AWS IoT Core integration for the mesh - MQTT5/mTLS transport, Device
# Shadow mirror, S3 camera offload, account-wide bootstrap (Rules /
# Lambda / DynamoDB / Fleet Provisioning template). Requires:
#   * awsiotsdk (high-level MQTT5 + mTLS client builder)
#   * awscrt    (low-level CRT runtime; pulled in by awsiotsdk but pinned
#                here for transitive predictability)
#   * boto3     (used for IoT control-plane provisioning + S3 frame upload)
mesh-iot = [
    "strands-robots[mesh]",
    "awsiotsdk>=1.21.0,<2.0.0",
    "awscrt>=0.20.0,<1.0.0",
    "boto3>=1.34.0,<2.0.0",
]
# Device Connect - device-aware networking layer (discovery, RPC, events,
# safety). The primary transport in server mode; when this extra is not
# installed, robot_mesh() falls back to the built-in Zenoh mesh.
device-connect = [
    "device-connect-edge>=0.2.0",
    "device-connect-agent-tools>=0.1.0",
]
all = [
    "strands-robots[groot-service]",
    "strands-robots[moveit2]",
    "strands-robots[lerobot]",
    "strands-robots[sim-mujoco]",
    "strands-robots[mesh]",
    "strands-robots[mesh-iot]",
    "strands-robots[device-connect]",
]
dev = [
    "pytest>=6.0,<9.0.0",
    "pytest-cov>=4.0.0,<6.0.0",
    "ruff>=0.4.0,<1.0.0",
    "mypy>=1.0.0,<2.0.0",
    "pytest-timeout>=2.0.0,<3.0.0",
]

[project.scripts]
strands-robots = "strands_robots.__main__:main"

[project.urls]
Homepage = "https://github.com/strands-labs/robots"
Documentation = "https://github.com/strands-labs/robots#readme"
Repository = "https://github.com/strands-labs/robots.git"
Issues = "https://github.com/strands-labs/robots/issues"
Changelog = "https://github.com/strands-labs/robots/releases"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["strands_robots"]

[tool.hatch.envs.default]
installer = "uv"
features = ["all"]
dependencies = [
    "pytest>=6.0,<9.0.0",
    "pytest-cov>=4.0.0,<6.0.0",
    "pytest-timeout>=2.0.0,<3.0.0",
    "ruff>=0.4.0,<1.0.0",
    "mypy>=1.0.0,<2.0.0",
    "Pillow>=8.0.0,<12.0.0",
    "requests>=2.28.0,<3.0.0",
    "msgpack>=1.0.0,<2.0.0",
    "pyzmq>=27.0.0,<28.0.0",
    # mink (differential IK) for the Cosmos 3 sim-loop bridge regression test
    # (tests/policies/cosmos3/test_sim_ik.py); the cosmos3-sim extra is not in
    # `features=all`, so pull it into the dev env explicitly. mujoco comes from
    # sim-mujoco (already in `all`).
    "mink>=0.0.4",
    "qpsolvers[quadprog]>=4.0.0",
    # torchvision 0.26 (from the aarch64 torch>=2.11 override below) removed
    # torchvision.io.VideoReader, which lerobot 0.5.1's pyav fallback still calls,
    # crashing dataset video read-back. lerobot's torchcodec dep marker EXCLUDES
    # aarch64, so add torchcodec explicitly on linux+aarch64 -> lerobot uses its
    # preferred (working) torchcodec decoder instead of the removed VideoReader.
    "torchcodec>=0.7; platform_machine == 'aarch64' and sys_platform == 'linux'",
]

# ---------------------------------------------------------------------------
# torch 2.11 override for NVIDIA Thor / Jetson (linux + aarch64).
#
# The PyPI torch 2.10.0 aarch64 build has a bug in its sm_110 (Thor, compute
# capability 11.0) cuBLAS call path: every cublasSgemm returns
# CUBLAS_STATUS_INVALID_VALUE, so real policy inference crashes even though
# torch.cuda.is_available() is True. This is fixed in torch 2.11 (verified on
# NVIDIA Thor: native cuBLAS matmul + lerobot ACTPolicy inference both work).
#
# lerobot 0.5.1 declares torch<2.11 / torchvision<0.26, but that cap is
# conservative -- lerobot 0.5.1 imports and runs ACTPolicy fine on torch 2.11
# (empirically verified). We override the cap ONLY on linux+aarch64 so x86_64
# and macOS keep lerobot's resolved versions untouched.
#
# Paired with UV_TORCH_BACKEND=auto above, a Thor `hatch env` resolves
# torch==2.11.x+cu130 / torchvision==0.26.x+cu130 and inference runs on GPU
# with no shim or LD_PRELOAD workaround.
[tool.uv]
override-dependencies = [
    # On NVIDIA Thor/Jetson (linux+aarch64) bump torch past lerobot's <2.11 cap
    # (2.11 fixes the sm_110 cuBLAS bug). On every OTHER platform, mirror
    # lerobot's own bound so x86/macOS resolve the same torch they would
    # WITHOUT this override. NOTE: a uv override-dependency for `torch` with
    # ONLY an aarch64 marker REMOVES torch from non-aarch64 resolutions
    # entirely (proven: x86 resolved no torch -> tests/conftest.py installed
    # the numpy mock -> bfloat16 failures). The complementary marker is
    # mandatory, not cosmetic.
    "torch>=2.11,<2.12; platform_machine == 'aarch64' and sys_platform == 'linux'",
    "torch>=2.2,<2.11; platform_machine != 'aarch64' or sys_platform != 'linux'",
    "torchvision>=0.26,<0.27; platform_machine == 'aarch64' and sys_platform == 'linux'",
    "torchvision<0.26; platform_machine != 'aarch64' or sys_platform != 'linux'",
]

# Auto-select the right PyTorch wheel for the host accelerator. On NVIDIA
# Thor / Jetson (linux + aarch64) the plain-PyPI torch wheel is CPU-ONLY, so
# torch.cuda.is_available() is False and all inference silently runs on CPU.
# "auto" makes uv probe the local driver/SoC and resolve the matching build
# (e.g. +cu130 on Thor) WITHOUT changing the pinned version.
#
# IMPORTANT: uv's "auto" detection is HOST-based, not target-platform based.
# If "auto" is hardcoded here it contaminates EVERY resolution -- including
# x86 CI -- with the build host's CUDA variant. On a Thor that means x86 CI
# resolves +cu130 wheels (proven: `uv pip compile --python-platform
# x86_64-unknown-linux-gnu` yields torchcodec==0.10.0+cu130), which cannot
# import on the GPU-less runner, so tests/conftest.py silently falls back to
# the numpy torch mock and torch-dependent tests break.
#
# So we INHERIT the value from the process env and only DEFAULT to "auto":
#   - Thor/Jetson dev: nothing set -> "auto" -> GPU wheels.
#   - x86 CI: workflow exports UV_TORCH_BACKEND=cpu -> CPU wheels, importable.
# A hatch pyproject env-var normally OVERRIDES the process env; the
# {env:VAR:default} form is what lets the process value win.
[tool.hatch.envs.default.env-vars]
UV_TORCH_BACKEND = "{env:UV_TORCH_BACKEND:auto}"

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-integ = "pytest tests_integ/ -v --timeout=300 {args}"
lint = ["ruff check strands_robots tests tests_integ", "ruff format --check strands_robots tests tests_integ", "mypy strands_robots tests tests_integ"]
format = ["ruff check --fix strands_robots tests tests_integ", "ruff format strands_robots tests tests_integ"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
]
ignore = [
    "E501",  # line too long - handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["strands_robots"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = false

# Third-party libs without type stubs
[[tool.mypy.overrides]]
module = ["lerobot.*", "gr00t.*", "draccus.*", "msgpack.*", "websockets", "websockets.*", "zmq.*", "huggingface_hub.*", "serial.*", "psutil.*", "torch.*", "torchvision.*", "transformers.*", "einops.*", "robot_descriptions.*", "mujoco.*", "imageio.*", "libero.*", "zenoh.*", "boto3", "boto3.*", "awscrt", "awscrt.*", "awsiot", "awsiot.*", "botocore.*", "strands_robots.policies.cosmos3._msgpack_numpy", "diffusers", "diffusers.*", "accelerate", "accelerate.*", "openpi_client", "openpi_client.*", "openpi_server", "openpi_server.*", "openpi", "openpi.*", "device_connect_edge", "device_connect_edge.*", "device_connect_agent_tools", "device_connect_agent_tools.*", "rclpy", "rclpy.*", "moveit", "moveit.*", "moveit_configs_utils", "moveit_configs_utils.*", "geometry_msgs", "geometry_msgs.*", "mink", "mink.*", "qpsolvers", "qpsolvers.*"]
ignore_missing_imports = true

# Device Connect drivers - thin wrappers over the untyped device_connect_edge
# SDK; their RPC handlers return dicts that bubble Any (same posture as tools.*).
[[tool.mypy.overrides]]
module = ["strands_robots.device_connect.*"]
disallow_untyped_defs = false
warn_return_any = false

# @tool decorator injects runtime signatures mypy cannot check
[[tool.mypy.overrides]]
module = ["strands_robots.tools.*"]
disallow_untyped_defs = false
warn_return_any = false
ignore_missing_imports = true

# LeRobot local policy uses dynamic attr access via draccus PreTrainedConfig
[[tool.mypy.overrides]]
module = ["strands_robots.policies.*"]
warn_return_any = false
disallow_untyped_defs = false

# Robot core - complex dynamic assembly, optional deps
[[tool.mypy.overrides]]
module = ["strands_robots.robot"]
disallow_untyped_defs = false
warn_return_any = false

# __init__.py has lazy import helpers
[[tool.mypy.overrides]]
module = ["strands_robots.__init__"]
disallow_untyped_defs = false

# AWS IoT bootstrap modules - boto3 always returns Any from API calls.
# We type the public surface explicitly (ProvisionedThing, BootstrappedAccount)
# but the internal helpers naturally bubble Any from boto3.
[[tool.mypy.overrides]]
module = ["strands_robots.mesh.iot.*", "strands_robots.mesh.transport.iot_transport"]
warn_return_any = false

# Registry modules - dynamic JSON loading returns Any
[[tool.mypy.overrides]]
module = ["strands_robots.registry.*"]
warn_return_any = false
disallow_untyped_defs = false

# MuJoCo simulation - mixins use cooperative self._world patterns
# attr-defined: Mixins access self._world/self._lock/etc. from Simulation (cooperative pattern)
# assignment: PEP 484 implicit Optional (= None on typed params)
# override: Subclass signatures extend base with extra params (orientation, mesh_path)
# misc: Multiple inheritance method resolution conflicts between mixin + ABC
[[tool.mypy.overrides]]
module = ["strands_robots.simulation.mujoco.*"]
disallow_untyped_defs = false
warn_return_any = false

# Async utils and dataset recorder - thin wrappers with dynamic types
[[tool.mypy.overrides]]
module = ["strands_robots._async_utils", "strands_robots.dataset_recorder"]
disallow_untyped_defs = false
warn_return_any = false

# Test files - relaxed type checking for mocks, fixtures, and test utilities
[[tool.mypy.overrides]]
module = ["tests.*", "tests_integ.*"]
disallow_untyped_defs = false
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=strands_robots --cov-report=term-missing --strict-markers --timeout=120"
markers = [
    "gpu: requires CUDA GPU and real model weights (run with: pytest -m gpu)",
    "slow: long-running test (deselect with: pytest -m 'not slow')",
    "integration: requires live Device Connect infra (Zenoh router + etcd via Docker); skipped unless DEVICE_CONNECT_ALLOW_INSECURE is set (deselect with: pytest -m 'not integration')",
    "moveit2: requires a running MoveIt2 sidecar (ROS 2 / moveit_py). Run with: pytest -m moveit2",
    "curobo: requires NVIDIA cuRobo + a CUDA-capable GPU. Run with: pytest -m curobo (set CUROBO_LIVE=1)",
]
